Fix and clean-up upsert and dedup config